--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ DAW/HLC/UD 1/ud1-a2-destructuracion-destructuring-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a3-modulos-es6-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a4-clases-en-javascript-JoseManuelLopezValer0/
 DAW/DWEC/UD 2/tarea-2-7-organismos-y-estandares-JoseManuelLopezValer0/
+DAW/DWEC/UD 2/tarea-2-9-nullish-falsy-y-otros-entretenimientos-js-JoseManuelLopezValer0
+DAW/DWEC/UD 2/tarea-2-11-bucles-for-y-sus-allegados-iterables-JoseManuelLopezValer0
