--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,4 @@ DAW/DWEC/UD 3/listado-arrays-en-javascript-2-JoseManuelLopezValer0s/
 DAW/HLC/UD 1/ud1-a2-destructuracion-destructuring-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a3-modulos-es6-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a4-clases-en-javascript-JoseManuelLopezValer0/
-DIW/tema2/Practica 7/Tutorial_CSS3_2022-23/
+DAW\DIW\tema 2\Practica 7\Tutorial_CSS3_2022-23
