--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ DAW/HLC/UD 1/ud1-a2-destructuracion-destructuring-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a3-modulos-es6-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a4-clases-en-javascript-JoseManuelLopezValer0/
 DAW/DIW/tema 2/Practica 7/
+DAW/DWEC/UD 3/listado-arrays-en-javascript-2-JoseManuelLopezValer0/
+DAW/HLC/UD 1/ud1-a5-tutorial-tic-tac-toe-JoseManuelLopezValer0/
