--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,17 @@ DAW/DWEC/UD 2/tarea-2-9-nullish-falsy-y-otros-entretenimientos-js-JoseManuelLope
 DAW/DWEC/UD 3/tarea-3-1-listado-string-y-regexp-JoseManuelLopezValer0/
 DAW/DWEC/UD 3/listado-arrays-en-javascript-2-JoseManuelLopezValer0s/
 DAW/DWEC/UD 3/listado-arrays-en-javascript-2-JoseManuelLopezValer0/
+DAW/DWEC/UD 3/calculadora-JoseManuelLopezValer0/
+DAW/DWEC/UD 3/listado-set-map-weakset-weakmap-JoseManuelLopezValer0/
+DAW/DWEC/UD 3/listado-ventanas-locas-JoseManuelLopezValer0/
+DAW/DWEC/UD 4/calculadora-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a2-destructuracion-destructuring-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a3-modulos-es6-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a4-clases-en-javascript-JoseManuelLopezValer0/
 DAW/HLC/UD 1/ud1-a5-tutorial-tic-tac-toe-JoseManuelLopezValer0/
+DAW/HLC/UD 2/todo-list-JoseManuelLopezValer0/
+DAW/HLC/UD 2/ud2-a-componentes-JoseManuelLopezValer0/
+DAW/HLC/UD 2/ud2-a2-instalacion-del-entorno-local-JoseManuelLopezValer0/
 DAW/DIW/tema 2/Practica 7/
 desktop.ini
 extensions.json
