--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ DAW/HLC/UD 2/todo-list-JoseManuelLopezValer0/
 DAW/HLC/UD 2/ud2-a-componentes-JoseManuelLopezValer0/
 DAW/HLC/UD 2/ud2-a2-instalacion-del-entorno-local-JoseManuelLopezValer0/
 DAW/DIW/tema 2/Practica 7/
+DAW/DIW/tema 2/Practica 9/LopezValeroJoseManuel.zip
 desktop.ini
 extensions.json
