--- a/DAW/DWES/UD7/hola mundo v-c/composer.json
+++ b/DAW/DWES/UD7/hola mundo v-c/composer.json
@@ -1,10 +1,11 @@
 {
-    "autoload": {
-          "psr-4": {
-             "App\\": "app/"
-             }
-          },
-          "require":{
-        "vlucas/phpdotenv": "^5.5"
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "App\\Controllers\\": "app/Controllers/"
     }
-    }
+  },
+  "require": {
+    "vlucas/phpdotenv": "^5.5"
+  }
+}
